//
//  Constants.swift
//  TEDTalkRater
//
//  Created by Beverly Massengill on 8/24/18.
//  Copyright © 2018 bmassengill. All rights reserved.
//

import Foundation

struct Constants {
    
    struct ScreenTitles {
        
        static let talksScreenTitle = "TEDTalks"
        static let ratingsScreenTitle = "Ratings"
    }
    
    struct Labels {
        
        static let presenterLabel = "Presenter: "
        static let starsLabel = " Stars"
        static let loadingLabel = "Loading TEDTalks..."
        static let noRatingsLabel = "No Ratings Yet"
        static let ratedTab = "Rated"
        static let searchTab = "Search"
    }
    
    struct Accessibility {
        
        static let talksTable = "Talks TableView"
        static let ratingsTable = "Ratings TableView"
        static let loadingIndicator = "In progress"
        static let ratingView = "Rating"
        static let searchBar = "Talks Search Bar"
        static let endRickRoll = "Please Make It Stop"
        static let rickImage = "Rick Astley Image"
    }
    
    struct CSV {
        
        static let fileName = "CodeChallenge"
        static let title = "title"
        static let description = "description"
        static let speaker = "main_speaker"
    }
    
    struct Tests {
        
        static let testsParam = "--tests"
        static let shakeGesture = "Shake Gesture"
    }
}
